# ray-trace

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: camera.rs  hit.rs  main.rs  material.rs  ray.rs  render.rs  sphere.rs  vec.rs
src/math/: bounds.rs  mod.rs  normal.rs  point.rs  ray.rs  transformation.rs  vec.rs
