[package]
name = "ray-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.2", features = ["derive"]}
indicatif = {version = "0.16.2", features = ["rayon"]}
rand = "0.8.5"
rayon = "1.5"
